MrHuangJser - add style files

--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -1,5 +1,10 @@
 @import './bootstrap.css';
 @import './theme.less';
+@import './editor.less';
+@import './grid.less';
+@import './no-zoom-area.less';
+@import './select-area.less';
+@import './select-handle.less';
 
 @toolbar-text-color: rgb(91, 107, 115);
 @disabled-color: rgb(200, 205, 208);
